# my-finance

./: .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  app.py  auth.py  crypto.py  database.py  docker-compose.yml  models.py  pyproject.toml  utils.py
.specs/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_timestamp_fields.py  0003_add_cash_flow_tables.py  0004_add_year_to_transactions.py  0005_add_username_hash_to_users.py  0006_add_missing_indexes.py  0007_add_description_hash_to_transactions.py  0008_encrypt_cash_flow_fields.py  0009_add_token_version_to_users.py
components/: advance_installments.py  charts.py  new_transaction.py  styles.py
models/: __init__.py  cash_flow.py  cash_flow_entry.py  cash_flow_month.py  cash_flow_template.py  cash_flow_template_item.py  category.py  transaction.py  user.py
pages/: admin.py  cash_flow.py  categories.py  dashboard.py  login.py  profile.py  transactions.py
repositories/: __init__.py  base_repository.py  cash_flow_entry_repository.py  cash_flow_month_repository.py  cash_flow_repository.py  cash_flow_template_repository.py  categories_repository.py  transactions_repository.py  users_repository.py
scripts/: migrate_sqlite.py
tests/: conftest.py
tests/unit/: test_category_types.py  (+7 more)
utils/: auth.py  category_types.py  crypto.py  data_format_utils.py  filters.py  i18n.py  password_utils.py  session.py
(+11 files in other folders)
